# anpr2mqtt

./: .gitignore  .pre-commit-config.yaml  .uvignore  404.html  CHANGELOG.md  CNAME  Dockerfile  README.md  http_cache.sqlite  index.html  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  sitemap.xml  tags.json
.github/workflows/: deploy.yml  docker-publish.yml  pypi-publish.yml  python-package.yml
api/: index.html
camera/: index.html
changelog/: index.html
debug_tools/: index.html
developer/coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_f789195fb73f8329___init___py.html  z_f789195fb73f8329___main___py.html  z_f789195fb73f8329_api_client_py.html  z_f789195fb73f8329_app_py.html  z_f789195fb73f8329_const_py.html  z_f789195fb73f8329_event_handler_py.html  z_f789195fb73f8329_frigate_handler_py.html  z_f789195fb73f8329_handler_common_py.html  z_f789195fb73f8329_hass_py.html  z_f789195fb73f8329_normalizers_py.html  z_f789195fb73f8329_settings_py.html  z_f789195fb73f8329_tools_py.html  z_f789195fb73f8329_tracker_py.html
developer/setup/: index.html
docs/: api.md  camera.md  changelog.md  debug_tools.md  homeassistant.md  index.md  ocr.md
docs/developer/: setup.md
docs/examples/: config_maximal.md  config_minimal.md  docker_compose.md  env.md  ha_automation.md
examples/: anpr2mqtt.yaml.legacy  anpr2mqtt.yaml.maximal  anpr2mqtt.yaml.mine  anpr2mqtt.yaml.minimal  docker-compose.yaml  ha_automation.yaml  index.html  maximal.yaml
examples/config_maximal/: index.html
examples/config_minimal/: index.html
examples/docker_compose/: index.html
examples/env/: index.html
examples/ha_automation/: index.html
homeassistant/: index.html
ocr/: index.html
scripts/: healthcheck.sh
search/: search_index.json
src/anpr2mqtt/: __init__.py  api_client.py  app.py  const.py  event_handler.py  frigate_handler.py  handler_common.py  hass.py  normalizers.py  settings.py  tools.py  tracker.py
tests/: conftest.py  test_api_client.py  test_app.py  test_event_handler.py  test_example_configs.py  test_frigate_handler.py  test_hass.py  test_normalizer.py  test_settings.py  test_tools.py  test_tools_unit.py  test_tracker.py
